--- a/src/reviews/templates/reviews/create_review.html
+++ b/src/reviews/templates/reviews/create_review.html
@@ -1,24 +1,12 @@
 {% extends 'base.html' %}
 
+{% load crispy_forms_tags %}
+
 {% block content %}
-  <h1>Créer une critique</h1>
+  <h2>Créer une review</h2>
   <form method="post">
     {% csrf_token %}
-    <label for="rating">Note :</label>
-    <select name="rating" id="rating">
-      <option value="1">1</option>
-      <option value="2">2</option>
-      <option value="3">3</option>
-      <option value="4">4</option>
-      <option value="5">5</option>
-    </select>
-    <br>
-    <label for="headline">Titre :</label>
-    <input type="text" name="headline" id="headline" required>
-    <br>
-    <label for="body">Contenu :</label>
-    <textarea name="body" id="body"></textarea>
-    <br>
-    <input type="submit" value="Envoyer">
+    {{ form|crispy }}
+    <input type="submit" value="Créer">
   </form>
 {% endblock %}
