--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -1,13 +1,33 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     {% block title %}
-        <title>Accueil</title>
+        <title>LITReview</title>
     {% endblock %}
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    <section  id="Review">
+<nav>
+  <ul>
+
+      {% if request.user.is_authenticated %}
+      <li><a href="{% url 'followers:logout' %}">déconnexion</a></li>
+      <li><a href="{% url 'followers:profile' %}">bonjour {{ user.username }}</a></li>
+      {% else %}
+      <li><a href="{% url 'followers:login' %}">Se connecter</a></li>
+      {% endif %}
+      <li><a href="{% url 'reviews:home' %}">Post</a></li>
+      <li><a href="{% url 'followers:follow' %}">Abonnements</a></li>
+      <li><a href="{% url 'reviews:home' %}">Accueil</a></li>
+
+
+
+  </ul>
+
+</nav>
+    <section id="blog">
 
         {% block content %}
         {% endblock %}
